@@ -40,12 +40,12 @@ class RentOptionFactoryTest {
             new BaseTitleDeed(Group.GREEN, "vicolo corto", START_RENT * 10, s -> s / 2, START_RENT, List.of(doubledPrice)),
             new BaseTitleDeed(Group.GREEN, "vicolo stretto", START_RENT * 10, s -> s / 2, START_RENT, List.of(doubledPrice))
         );
-        deeds.getFirst().setOwner(OWNER_ID);
+        deeds.get(0).setOwner(OWNER_ID);
         assertFalse(doubledPrice.canBeApplied(Set.copyOf(deeds), OWNER_ID, null));
-        assertEquals(START_RENT, deeds.getFirst().getRent(Set.copyOf(deeds), DICE));
-        deeds.getLast().setOwner(OWNER_ID);
+        assertEquals(START_RENT, deeds.get(0).getRent(Set.copyOf(deeds), DICE));
+        deeds.get(deeds.size() - 1).setOwner(OWNER_ID);
         assertTrue(doubledPrice.canBeApplied(Set.copyOf(deeds), OWNER_ID, null));
-        assertEquals(START_RENT * 2, deeds.getFirst().getRent(Set.copyOf(deeds), DICE));
+        assertEquals(START_RENT * 2, deeds.get(0).getRent(Set.copyOf(deeds), DICE));
     }
 
     @Test
